--- a/app/views/layout.pug
+++ b/app/views/layout.pug
@@ -3,10 +3,13 @@ html
   head
     title Passport Local
     link(rel="stylesheet" href="mystyle.css")
+    script(src="style/fontawesome-all.min.js")
+    script(src="js/vue.js")
   body
     block home
     block login
     block register
     block dash
     block todo
-    script(src="script.js")
+    script(src="js/script.js")
+    script(src="js/axios.js")
